CSS fixes for image blurring

--- a/dev/css/custom.css
+++ b/dev/css/custom.css
@@ -239,7 +239,7 @@ a {
   border-bottom: none;
 }
 .playlist .playlistContent .imageContainer {
-  height: 144px;
+  height: 182px;
   width: 50%;
   position: relative;
   float: left;
@@ -247,19 +247,31 @@ a {
 }
 .playlist .playlistContent .imageContainer img {
   /*width: 100%;*/
-  height: 100%;
+  /*height: 144px;
   width: 100% !important;
   position: relative;
   left: 100%;
-  margin-left: -200%;
+  margin-left: -200%;*/
+          width: auto!important;
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    margin: auto;
 }
 .playlist .playlistContent .playlistContentInner {
   position: relative;
   height: 100%;
   overflow: hidden;
+  background-color: #2f2b2c;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .playlist .playlistContent.generContent .imageContainer img {
-  width: 100% !important;
+  /*width: 100% !important;*/
 }
 .playlist .playlistDetails {
   position: absolute;
@@ -711,7 +723,8 @@ a {
   top: 0;
   height: 100%;
   width: 100%;
-  background: rgba(0, 0, 0, 0);
+  background: #000 !important;
+  /*background: rgba(0, 0, 0, 0);*/
 }
 .movieVideo {
   /*background: url('../img/image1.jpg');
@@ -1075,7 +1088,7 @@ a {
   margin-bottom: 0;
 }
 .genre .playlist .playlistContent > div img {
-  opacity: 0.6;
+  /*opacity: 0.6;*/
 }
 .genre .overlay {
   background: rgba(0, 0, 0, 0);
